# pystanli

./: LICENSE  README.md  pyproject.toml
pystanli/: __init__.py  pystanli.py
